--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,6 @@
 <div class="grid grid-cols-8 w-full rounded border border-gray-400 bg-white hover:bg-gray-100">
-    <div class="col-span-7 p-4 overflow-hidden">
+    <div class="col-span-7 p-4 overflow-hidden cursor-pointer" 
+        (click)="redirectToURL(hit.story_url)">
         <div class="flex flex-row justify-left items-center">
             <img src="../../../assets/images/iconmonstr-time-2.svg" alt="clock.svg" class="w-3 h-3">
             <h4 class="author-text p-1">Created at {{hit.created_at| date}} by {{hit.author | titlecase}}</h4>
@@ -10,7 +11,8 @@
     </div>
     <div class="flex justify-center bg-gray-200">
         <span class="p-4">
-            <img src="../../../assets/images/iconmonstr-favorite-2.svg" alt="heart.jpg" class=" w-6 h-10">
+            <img src="../../../assets/images/iconmonstr-favorite-2.svg" alt="heart.jpg" 
+                 class=" w-6 h-10 cursor-pointer hover:bg-gray-200">
         </span>
     </div>
 </div>
