--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
-<div class="grid grid-cols-8 w-full rounded border border-gray-400 bg-white hover:bg-gray-100">
-    <div class="col-span-7 p-4 overflow-hidden cursor-pointer" 
+<div class="grid grid-cols-8 w-full rounded border border-gray-400 bg-white">
+    <div class="col-span-7 p-4 overflow-hidden cursor-pointer hover:bg-gray-100" 
         (click)="redirectToURL(hit.story_url)">
         <div class="flex flex-row justify-left items-center">
             <img src="../../../assets/images/iconmonstr-time-2.svg" alt="clock.svg" class="w-3 h-3">
@@ -9,10 +9,18 @@
             {{hit.story_title}}
         </p>
     </div>
-    <div class="flex justify-center bg-gray-200">
-        <span class="p-4">
+    <div class="flex justify-center bg-gray-200 cursor-pointer">
+        <span *ngIf="!modeFav; else favouriteIcon" class="p-4">
             <img src="../../../assets/images/iconmonstr-favorite-2.svg" alt="heart.jpg" 
-                 class=" w-6 h-10 cursor-pointer hover:bg-gray-200">
+                 class=" w-6 h-10 cursor-pointer"
+                 (click)="addToFavourites(index)">
         </span>
+        <ng-template #favouriteIcon>
+            <span class="p-4">
+                <img src="../../../assets/images/iconmonstr-favorite-3.svg" alt="heart.jpg" 
+                     class=" w-6 h-10 cursor-pointer"
+                     (click)="addToFavourites(index)">
+            </span>
+        </ng-template>
     </div>
 </div>
