--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,5 +1,7 @@
 <div class="grid gap-8 grid-cols-1 grid-rows-8 p-20 lg:grid-cols-2 lg:grid-rows-4">
-    <div *ngFor="let hit of hits">
-        <app-card [hit]="hit"></app-card>
+    <div *ngFor="let hit of hits; let i = index">
+        <app-card [hit]="hit"
+                  [index]="i"
+                  [modeFav]="modeFav"></app-card>
     </div>
 </div>
