feat(app): various changes in CSS and added locaStorage references.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,9 @@
 <div class="header">
     <nav>
-        <span class="hacker-news">HACKER NEWS</span>
+        <span class="hacker-news">
+            <a [routerLink]="['/']">
+                HACKER NEWS
+            </a>
+        </span>
     </nav>
 </div>
