--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,25 +1,29 @@
 <div class="grid grid-cols-8 w-full rounded border border-gray-400 bg-white">
-    <div class="col-span-7 p-4 overflow-hidden cursor-pointer hover:bg-gray-100" 
-        (click)="redirectToURL(hit.story_url)">
+    <div class="col-span-7 p-4 overflow-hidden cursor-pointer hover:bg-gray-100" (click)="redirectToURL(hit.story_url)">
         <div class="flex flex-row justify-left items-center">
             <img src="../../../assets/images/iconmonstr-time-2.svg" alt="clock.svg" class="w-3 h-3">
-            <h4 class="author-text p-1">Created at {{hit.created_at| date}} by {{hit.author | titlecase}}</h4>
+            <h4 class="author-text p-1">Created by {{hit.author | titlecase}} at
+                {{calculeDifferenceBetweendDates(hit.created_at) | number}} hours ago</h4>
         </div>
         <p class="card-text pt-1" align="justify">
             {{hit.story_title}}
         </p>
     </div>
     <div class="flex justify-center bg-gray-200 cursor-pointer">
-        <span *ngIf="!modeFav; else favouriteIcon" class="p-4">
-            <img src="../../../assets/images/iconmonstr-favorite-2.svg" alt="heart.jpg" 
-                 class=" w-6 h-10 cursor-pointer"
-                 (click)="addToFavourites(index)">
+        <span *ngIf="(!modeFav && !foundHitInFavourites(hit)); else hitInFavourite" class="p-4">
+            <img src="../../../assets/images/iconmonstr-favorite-2.svg" alt="heart.jpg" class=" w-6 h-10 cursor-pointer"
+                (click)="addToFavourites(index)">
         </span>
+        <ng-template #hitInFavourite>
+            <span *ngIf="!modeFav && foundHitInFavourites(hit); else favouriteIcon" class="p-4">
+                <img src="../../../assets/images/iconmonstr-favorite-3.svg" alt="heart.jpg"
+                    class=" w-6 h-10 cursor-pointer" (click)="deleteFromFavourites(hit)">
+            </span>
+        </ng-template>
         <ng-template #favouriteIcon>
             <span class="p-4">
-                <img src="../../../assets/images/iconmonstr-favorite-3.svg" alt="heart.jpg" 
-                     class=" w-6 h-10 cursor-pointer"
-                     (click)="addToFavourites(index)">
+                <img src="../../../assets/images/iconmonstr-favorite-3.svg" alt="heart.jpg"
+                    class=" w-6 h-10 cursor-pointer" (click)="addToFavourites(index)">
             </span>
         </ng-template>
     </div>
