--- a/src/styles.css
+++ b/src/styles.css
@@ -2,18 +2,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Baskervville&display=swap");
 
 .card-text {
-    font-family: 'Roboto';
-    font-size: 14px;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.43;
-    letter-spacing: 0.25px;
+    font-family: 'Roboto', Roboto;
     color: #6b6b6b;
   }
 
 .author-text {
-    font-family: 'Roboto';
+    font-family: 'Roboto', Roboto;
     font-size: 11px;
     font-weight: normal;
     font-stretch: normal;
@@ -24,6 +18,8 @@
 }
 
 .main-content {
-    font-family: 'Roboto';
+    font-family: 'Roboto', Roboto;
     color: #606060;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
