--- a/src/app/pages/favs/favs.component.html
+++ b/src/app/pages/favs/favs.component.html
@@ -1,4 +1,5 @@
 <!-- Dropdown list -->
 <div class="flex flex-col">
-    <app-grid [hits]="favs" [modeFav]="true"></app-grid>
+    <app-grid [hits]="favs" 
+              [modeFav]="true"></app-grid>
 </div>
