--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,29 +1,29 @@
-<div class="grid grid-cols-8 w-full rounded border border-gray-400 bg-white">
-    <div class="col-span-7 p-4 overflow-hidden cursor-pointer hover:bg-gray-100" (click)="redirectToURL(hit.story_url)">
+<div class="grid grid-cols-9 bg-white rounded border border-gray-400 hover:opacity-100">
+    <div class="col-span-8 p-4 overflow-hidden cursor-pointer" (click)="redirectToURL(hit.story_url)">
         <div class="flex flex-row justify-left items-center">
             <img src="../../../assets/images/iconmonstr-time-2.svg" alt="clock.svg" class="w-3 h-3">
-            <h4 class="author-text p-1">Created by {{hit.author | titlecase}} at
-                {{calculeDifferenceBetweendDates(hit.created_at) | number}} hours ago</h4>
+            <h4 class="author-text p-1">{{calculeDifferenceBetweendDates(hit.created_at) | number}} hours ago by
+                {{hit.author | titlecase}} </h4>
         </div>
-        <p class="card-text pt-1" align="justify">
+        <p class="text-sm font-[520] pt-1">
             {{hit.story_title}}
         </p>
     </div>
-    <div class="flex justify-center bg-gray-200 cursor-pointer">
+    <div class="flex col-span-1 items-center justify-center bg-gray-100 cursor-pointer">
         <span *ngIf="(!modeFav && !foundHitInFavourites(hit)); else hitInFavourite" class="p-4">
-            <img src="../../../assets/images/iconmonstr-favorite-2.svg" alt="heart.jpg" class=" w-6 h-10 cursor-pointer"
+            <img src="../../../assets/images/iconmonstr-favorite-2.svg" alt="heart.jpg" class=" w-5 h-9 cursor-pointer"
                 (click)="addToFavourites(index)">
         </span>
         <ng-template #hitInFavourite>
             <span *ngIf="!modeFav && foundHitInFavourites(hit); else favouriteIcon" class="p-4">
                 <img src="../../../assets/images/iconmonstr-favorite-3.svg" alt="heart.jpg"
-                    class=" w-6 h-10 cursor-pointer" (click)="deleteFromFavourites(hit)">
+                    class=" w-5 h-9 cursor-pointer" (click)="deleteFromFavourites(hit)">
             </span>
         </ng-template>
         <ng-template #favouriteIcon>
             <span class="p-4">
                 <img src="../../../assets/images/iconmonstr-favorite-3.svg" alt="heart.jpg"
-                    class=" w-6 h-10 cursor-pointer" (click)="addToFavourites(index)">
+                    class=" w-5 h-9 cursor-pointer" (click)="deleteFromFavourites(hit)">
             </span>
         </ng-template>
     </div>
