--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -26,7 +26,7 @@
     <app-grid [hits]="hits" [modeFav]="false"></app-grid>
     <div class="flex flex-col items-center">
         <button
-            class="bg-transparent hover:bg-[#1797ff] text-[#1797ff] font-medium hover:text-white py-2 px-4 border border-[#1797ff] hover:border-transparent rounded"
+            class="bg-transparent hover:bg-[#1797ff] text-[#1797ff] font-medium hover:text-white py-2 px-4 mb-4 border border-[#1797ff] hover:border-transparent rounded"
             (click)="searchByPage()">
             Load more news
         </button>
