--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
 </div>
 <div class="main-content">
     <!-- main-content flex h-screen -->
-    <div class="mx-64 py-5">
+    <div class="mx-32 py-5 xl:mx-80">
         <!-- Dropdown list -->
         <router-outlet></router-outlet>
     </div>
