--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,8 +1,5 @@
-<div class="grid gap-10 grid-cols-1 grid-rows-8 p-20 lg:grid-cols-2 lg:grid-rows-4">
+<div class="grid gap-10 grid-cols-1 p-20 lg:grid-cols-2">
     <div *ngFor="let hit of hits; let i = index" class="h-full">
-        <app-card 
-                  [hit]="hit"
-                  [index]="i"
-                  [modeFav]="modeFav"></app-card>
+        <app-card [hit]="hit" [index]="i" [modeFav]="modeFav"></app-card>
     </div>
 </div>
