--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url("https://fonts.googleapis.com/css2?family=Baskervville&display=swap");
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .card-text {
     font-family: 'Roboto', Roboto;
