--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,11 +1,11 @@
-<div class="grid grid-cols-9 bg-white rounded border border-gray-400 hover:opacity-50 h-[90px]">
+<div class="grid grid-cols-9 bg-white rounded border border-gray-400 h-[90px] overflow-hidden hover:opacity-50">
     <div class="col-span-7 xl:col-span-8 p-4 overflow-hidden cursor-pointer" (click)="redirectToURL(hit.story_url)">
         <div class="flex flex-row justify-left items-center">
             <img src="../../../assets/images/iconmonstr-time-2.svg" alt="clock.svg" class="w-3 h-3">
             <h4 class="author-text p-1">{{calculeDifferenceBetweendDates(hit.created_at) | number}} hours ago by
                 {{hit.author | titlecase}} </h4>
         </div>
-        <p class="text-sm font-[520] pt-1">
+        <p class="text-sm font-[520] py-1 line-clamp-2">
             {{hit.story_title}}
         </p>
     </div>
