--- a/src/app/components/grid/grid.component.html
+++ b/src/app/components/grid/grid.component.html
@@ -1,4 +1,4 @@
-<div class="grid gap-10 grid-cols-1 p-20 lg:grid-cols-2">
+<div class="grid gap-10 grid-cols-1 lg:grid-cols-2 xs:p-10 md:p-20">
     <div *ngFor="let hit of hits; let i = index" class="h-full">
         <app-card [hit]="hit" [index]="i" [modeFav]="modeFav"></app-card>
     </div>
