--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,7 +1,7 @@
-<!-- Dropdown list -->
 <div class="flex flex-col">
     <div class="mx-auto lg:ml-20">
-        <select class="form-select appearance-none
+        <select class="form-select 
+                        appearance-none
                         block
                         w-48
                         px-3
@@ -14,11 +14,18 @@
                         rounded
                         transition
                         ease-in-out
-                        m-0
-                        focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" id="options"
-            name="options" [(ngModel)]="selectedOption" (change)="searchNews()">
-            <img src="../../../assets/images/heart-svgrepo-com.svg" class="w-3 h-3">
-            <option *ngFor="let option of options; let i = index" value={{option}} class="flex flex-col">
+                        m-10 md:m-0
+                        focus:text-gray-700 
+                        focus:bg-white 
+                        focus:border-blue-600 
+                        focus:outline-none" 
+                        id="options"
+                        name="options" 
+                        [(ngModel)]="selectedOption" 
+                        (change)="searchNews()">
+            <option *ngFor="let option of options; let i = index" value={{option}}>
+                <!-- TODO: add frameworks logo's -->
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" alt="">
                 {{options[i] | titlecase}}
             </option>
         </select>
