--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
-<div class="header">
-    <nav>
+<div class="header py-8 md:px-52">
+    <nav class="text-center md:text-left">
         <span class="hacker-news">
             <a [routerLink]="['/']">
                 HACKER NEWS
