--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header py-8 md:px-52">
+<div class="header w-screen py-8 md:px-52">
     <nav class="text-center md:text-left">
         <span class="hacker-news">
             <a [routerLink]="['/']">
