--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -31,12 +31,12 @@
         </select>
     </div>
     <app-grid [hits]="hits" [modeFav]="false"></app-grid>
-    <div class="flex flex-col items-center">
+    <div class="flex flex-col items-center py-5 md:py-2">
         <button
             class="bg-transparent hover:bg-[#1797ff] text-[#1797ff] 
                    font-medium hover:text-white py-2 px-4 mb-4 
                    border border-[#1797ff] 
-                   hover:border-transparent rounded py-2"
+                   hover:border-transparent rounded"
             (click)="searchByPage()">
             Load more news
         </button>
