docs(app): some documentation was added.

--- a/src/app/pages/favs/favs.component.html
+++ b/src/app/pages/favs/favs.component.html
@@ -1,5 +1,6 @@
 <!-- Dropdown list -->
 <div class="flex flex-col">
     <app-grid [hits]="favs" 
-              [modeFav]="true"></app-grid>
+              [modeFav]="true">
+    </app-grid>
 </div>
