fix(app): css styles was improved to generate a better responsive behaviour.

--- a/src/app/pages/favs/favs.component.html
+++ b/src/app/pages/favs/favs.component.html
@@ -1,5 +1,5 @@
 <!-- Dropdown list -->
-<div class="flex flex-col">
+<div class="flex flex-col pt-5 md:pt-0">
     <app-grid [hits]="favs" 
               [modeFav]="true">
     </app-grid>
