feat(favs.component.html): css changes in favs page.

--- a/src/app/pages/favs/favs.component.html
+++ b/src/app/pages/favs/favs.component.html
@@ -1,5 +1,5 @@
 <!-- Dropdown list -->
-<div class="flex flex-col pt-5 md:pt-0">
+<div class="flex flex-col pt-10">
     <app-grid [hits]="favs" 
               [modeFav]="true">
     </app-grid>
