--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,5 +1,5 @@
-<div class="grid grid-cols-8 bg-white rounded border border-gray-400 h-[90px] overflow-hidden hover:opacity-50">
-    <div class="col-span-7 p-4 overflow-hidden cursor-pointer" (click)="redirectToURL(hit.story_url)">
+<div class="grid grid-cols-9 bg-white rounded border border-gray-400 h-[90px] overflow-hidden hover:opacity-50">
+    <div class="col-span-7 lg:col-span-8 p-4 overflow-hidden cursor-pointer" (click)="redirectToURL(hit.story_url)">
         <div class="flex flex-row justify-left items-center">
             <img src="../../../assets/images/iconmonstr-time-2.svg" alt="clock.svg" class="w-3 h-3">
             <h4 class="author-text p-1 line-clamp-1">{{calculeDifferenceBetweendDates(hit.created_at) | number}} hours ago by
@@ -9,7 +9,7 @@
             {{hit.story_title}}
         </p>
     </div>
-    <div class="col-span-1 flex items-center justify-center bg-gray-100 cursor-pointer">
+    <div class="col-span-2 lg:col-span-1 flex items-center justify-center bg-gray-100 cursor-pointer">
         <div *ngIf="(!modeFav && !foundHitInFavourites(hit)); else hitInFavourite" class="py-auto">
             <img src="../../../assets/images/iconmonstr-favorite-2.svg" alt="heart.jpg" 
                  class="flex-none w-5 h-6"
